Fix room vertical alignment

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -114,7 +114,7 @@ html, body {
     border-bottom: 2px solid #A3A2A0;
 }
 #rooms {
-    padding-top: 32px;
+    padding-top: 8px;
     padding-bottom: 32px;
 }
 #rooms div {
